@@ -1,3 +1,9 @@
+20151104: 0.8.9:
+	* csc_config.c: csc_cfg_mkdir() updated the cfg->update flag once an
+	internal directory was created, which is not necessary. It caused
+	ezthumb save its setting everytime even nothing was changed. Let the
+	caller of csc_cfg_mkdir() decide to set the cfg->update or not.
+
 20151021: 0.8.8:
 	* csc_strcmp_param.c: added
 
